# cc_executor

./: .claude-hooks-logger-agent.json  .claude-hooks.json  .env.example  .gitignore  .mcp.json.backup  .mcp.json.bak  ASSESSMENT_FIX_REQUESTS.md  BLOCKER_ANALYSIS.md  BUFFER_FIX_FOR_DUMMIES.md  CC_EXECUTOR_FUNCTIONALITY_REPORT.json  CC_EXECUTOR_FUNCTIONALITY_REPORT.md  CC_EXECUTOR_VERIFICATION_REPORT.md  CHANGELOG.md  CLAUDE.md  CLAUDE_MAX_SDK_OPTIONS.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  CLEANUP_SUMMARY_20250714.md  CODE_REVIEW_REQUEST_DEPLOYMENT_READY.md  COMPREHENSIVE_FUNCTIONALITY_REPORT.py  CORE_DIRECTORY_ANALYSIS.md  DEPLOYMENT_READINESS_REPORT.md  DEPLOYMENT_READY_SUMMARY.md  DOCKER_DEPLOYMENT.md  Dockerfile  EXACT_FAILURE_LOGS_FOR_PERPLEXITY.md  FINAL_ASSESSMENT_SUMMARY_20250703.md  FINAL_BLOCKER_REPORT.md  FINAL_STRUCTURE.md  FIXES_IMPLEMENTED.md  FIX_WEBSOCKET_BLOCKING_SUBPROCESS.md  GEMINI_RECOMMENDATIONS_IMPLEMENTED.md  HOOK_COMPARISON_ANALYSIS.md  HOOK_FINDINGS_SUMMARY.md  HOOK_INTEGRATION_REPORT.md  HOOK_INTEGRATION_TEST_RESULTS.md  HOOK_WORKAROUND.md  INTEGRATION_READY.md  MANDATORY_COMMIT_PUSH_NOTIFY.md  MANIFEST.in  (+79 more)
.kilocode/: CODE_REVIEW_WORKFLOW.md  CONTEXT.md  PROMPT.md
.slash_commands/: invoke_1752270456.json
archived/: README.md  mcp_arango_crud.py.archived_20250716
assessments/: ASSESSMENT_SUMMARY_20250703.md  IMPLEMENTATION_SUMMARY.md
benchmarks/: profiling_setup.py
config/: add_arango_mcp_config.json  add_universal_llm_executor_config.json  stress_test_launch_plan.json
deployment/: DOCKER_CLAUDE_AUTH_EXPLANATION.md  DOCKER_DEPLOYMENT_REPORT.md  DOCKER_DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.api  Dockerfile.worker  README.md  SECURE_DEPLOYMENT_GUIDE.md  deploy.sh  docker-claude-test-18452c3e.json  docker-compose-fix.md  docker-compose.generated.yml  docker-compose.override.yml  docker-compose.secure.yml  docker-compose.yml  docker_setup.md  docker_setup.py  entrypoint.sh  fix-docker-claude.md  requirements-worker.txt  start_docker_claude_max.sh  start_services.py  test_api.py  test_api_simple.py  test_auth.py  (+11 more)
proof_of_concept/logger_agent/: GEMINI_CODE_DEBUG_SUMMARY.md  README.md  TEST_DATABASE_UPDATE_REPORT.md  WORKING_USAGE_VERIFICATION.md  docker-compose.yml  integration_test_results.md  main.py  pyproject.toml  requirements.txt  scratch.md  test_arango_simple.py  test_litellm_integration.py
proof_of_concept/logger_agent/.pids/: api_server.pid  dashboard.pid
proof_of_concept/logger_agent/dashboard/: package-lock.json
proof_of_concept/logger_agent/dashboard/src/components/: FilterPanel.vue
proof_of_concept/logger_agent/dashboard/src/composables/: useThemes.ts
proof_of_concept/logger_agent/docs/: ENHANCED_LOGGING_SUMMARY.md  HOOK_BEST_PRACTICES.md  TEST_DATABASE_ISOLATION_PATTERN.md
proof_of_concept/logger_agent/docs/conversations/: gemini_logger_app.md  implementation_questions_20250114.md
proof_of_concept/logger_agent/docs/guides/: fix_code_escalation_tool.json  gemini_batch_processing_flow.md  proposed_gemini_iteration_tools.md  technical_implementation_details.md
proof_of_concept/logger_agent/docs/integration/: BACKGROUND_PROCESS_GUIDE.md  CC_EXECUTOR_HOOK_INTEGRATION.md  COMPLETE_GEMINI_WORKFLOW.md  DASHBOARD_INTEGRATION_PLAN.md  DASHBOARD_INTEGRATION_SUMMARY.md  GEMINI_CLAUDE_CODE_INTEGRATION_TEMPLATE.md  GEMINI_EXTRACTION_WORKFLOW.md  GEMINI_OUTPUT_LIMITS.md  GEMINI_PROMPT_EXAMPLES.md  GRAPH_AND_SEARCH_ARCHITECTURE.md  HOOK_SETUP_COMPLETE.md  INTEGRATION_GUIDE.md  LITELLM_INTEGRATION.md  LITELLM_INTEGRATION_COMPLETE.md
proof_of_concept/logger_agent/docs/issues/: 001_issues_report.md  001_issues_report_final.md  001_issues_report_for_gemini.md  001_issues_report_with_code.md  002_critical_mock_issue_report.md  002_markdown_format_requirements.md  003_FINAL_ISSUES_REPORT_FOR_GEMINI.md  003_Gemini Answer.md  004_Gemini_Fix_Issues.md
proof_of_concept/logger_agent/docs/tasks/: 001_project_setup.md  001_project_setup_amended.md
proof_of_concept/logger_agent/docs/templates/: code_extraction_workflow_improvements.md
proof_of_concept/logger_agent/scripts/: append_full_scripts_to_report.py  extract_code_from_markdown.py  gemini_code_processor.py  integrate_cc_executor.sh  restart_dashboard.sh  setup_dashboard.sh  start_dashboard.sh  start_dashboard_background.sh  status_dashboard.sh  stop_dashboard.sh
proof_of_concept/logger_agent/src/: agent_log_manager.py  agent_log_manager_old.py  arango_init.py  arango_log_sink.py  arango_log_sink_backup.py  arango_log_sink_new.py  mcp_logger_agent.py
proof_of_concept/logger_agent/src/api/: __init__.py  dashboard_server.py
proof_of_concept/logger_agent/src/arangodb/: __init__.py
proof_of_concept/logger_agent/src/arangodb/core/: __init__.py
proof_of_concept/logger_agent/src/arangodb/core/graph/: __init__.py  agent_graph_builder.py  relationship_extraction.py
proof_of_concept/logger_agent/src/arangodb/core/memory/: memory_agent.py
proof_of_concept/logger_agent/src/arangodb/core/search/: __init__.py  agent_search.py  hybrid_search.py
proof_of_concept/logger_agent/src/tools/: analyze_agent_performance.py  assess_complexity.py  extract_gemini_code.py  query_agent_logs.py  send_to_gemini.py  send_to_gemini_batch.py
proof_of_concept/logger_agent/src/utils/: arango_async_helpers.py  comprehensive_test_db.py  log_utils.py  test_db_utils.py  test_utils.py
(+2815 files in other folders)
